--- a/Dom/1.html
+++ b/Dom/1.html
@@ -9,7 +9,13 @@
     <div class="bg-black">
         <h1  id = "title"class="heading">Dom Learning </h1>
         <p>Lorem ipsum dolor sit amet.</p>
+        <input type="text" placeholder="Enter text here">
+        <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+            <li>Item 3</li>
+        </ul>
     
     </div>
 </body>
-</html>
+</html> 
