--- a/Dom/1.html
+++ b/Dom/1.html
@@ -2,20 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    
-    <title>DOM Learning</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DOM</title>
 </head>
-<body>
-    <div class="bg-black">
-        <h1  id = "title"class="heading">Dom Learning </h1>
-        <p>Lorem ipsum dolor sit amet.</p>
-        <input type="text" placeholder="Enter text here">
-        <ul>
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
-        </ul>
-    
+<body style="background-color: black; color: white;">
+    <div class="parent">
+        <div class="day">Monday</div>
+        <div class="day">Tuesday</div>
+        <div class="day">Wednesday</div>
+        <div class="day">Thursday</div>
+        <div class="day">Friday</div>
     </div>
 </body>
+<script>
+    const parent = document.querySelector('.parent')
+    console.log(parent);
+    console.log(parent.children[1].innerHTML); 
+
+
+    for(let i=0; i<parent.children.length; i++){
+        console.log(parent.children[i].innerHTML);
+    }
+    parent.children[1].style.color ="orange"
+    console.log(parent.firstElementChild);
+    console.log(parent.lastElementChild);
+
+   const day1 = document.querySelector('.day');
+   console.log(day1);
+   console.log(day1.parentElement);
+   console.log(day1.nextElementSibling);
+   console.log("nodes:" ,parent.childNodes);
+</script>
 </html> 
