--- a/Async/one.html
+++ b/Async/one.html
@@ -26,7 +26,15 @@
     }
 
 
-    setTimeout(sayAditya, 3000); // Show alert after 3 seconds
+    const changeMe = setTimeout(sayAditya, 3000); // Show alert after 3 seconds
     setTimeout(changeText, 5000); // Change text after 5 seconds
+
+  //  clearTimeout(changeMe); // Stops the timeout before it executes
+
+document.querySelector('#stop').addEventListener('click', function(){
+    clearTimeout(changeMe);
+    alert("Timeout Cleared");
+})
+
 </script>
 </html>
